--- a/.github/workflows/deploy-to-hf.yml
+++ b/.github/workflows/deploy-to-hf.yml
@@ -12,8 +12,8 @@ jobs:
       - name: Push to Hugging Face Space
         run: |
           git config --global user.email "gm.ymlin@gmail.com"
-          git config --global user.name "ymlin105"
-          git remote add space https://huggingface.co/spaces/ymlin105/book-rec-with-LLMs
+          git config --global user.name "Yangmei Lin"
+          git remote add space https://ymlin105:${HF_TOKEN}@huggingface.co/spaces/ymlin105/book-rec-with-LLMs
           git push space master --force
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
